--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:jsf="http://xmlns.jcp.org/jsf"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
-    <f:view contentType="text/html;charset=UTF-8" encoding="UTF-8">
-        <h:head>
+<f:view contentType="text/html;charset=UTF-8" encoding="UTF-8">
+	<h:head>
+		<h:outputStylesheet library="css" name="indexstyle.css" />
+	</h:head>
+	<h:body>
+		<div class="navbar">
+			<p:commandButton type="button" value="Information"
+				styleClass="ui-button-raised ui-button-secondary navbutton" />
+			<p:commandButton type="button" value="Inscription"
+				styleClass="ui-button-raised ui-button-secondary navbutton" />
+			<p:commandButton type="button" value="Connexion"
+				styleClass="ui-button-raised ui-button-secondary navbutton" />
+		</div>
 
-        </h:head>
-        <h:body>
-            <p:textEditor secure="false" />
-            <p:spinner />
-        </h:body>
-    </f:view>
+		<div class="buttonwrapper">
+			<h2 class="hometitle">Bienvenue sur les batailles navales</h2>
+			<div class="buttondiv">
+				<p:commandButton type="button" value="Inscription"
+				styleClass="ui-button-raised ui-button-secondary homebutton" />
+			</div>
+			<div class="buttondiv">
+				<p:commandButton type="button" value="Connexion"
+				styleClass="ui-button-raised ui-button-secondary homebutton" />
+			</div>
+			<div class="buttondiv">
+				<p:commandButton type="button" value="Information"
+				styleClass="ui-button-raised ui-button-secondary homebutton" />
+			</div>
+		</div>
+	</h:body>
+</f:view>
 
 </html>
 
